Делает первую страницу

--- a/index.html
+++ b/index.html
@@ -6,12 +6,111 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Hello world</p>
-    <p>Hello world</p>
-    <p>Hello my world</p>
-    <p>Hello world</p>
-    <p>Hello world</p>
-    <p>Hello world</p>
-    <p>Hello world</p>
+    <header>
+         <nav>
+            <a href=""><span>Web</span>Studio</a>
+            <ul>
+                <li><a href="">Студия</a></li>
+                <li>Портфолио</li>
+                <li>Контакты</p></li>
+            </ul>
+        </nav>
+            <ul>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li>+38 096 111 11 11</li>
+            </ul>
+         
+    </header>
+    <main>
+        <!-- Шапка -->
+        <section>
+            <h1>Эффективные решения </br>для вашего бизнеса</h1>
+            <button type="button">Заказать услугу</button>
+        </section>
+        <!-- Особенности-->
+        <section>
+            <ul>
+                <li>
+                    <h2></h2>
+                    <h3>Внимание к деталям</h3>
+                    <p>
+                        Идейные соображения, а также </br>
+                        начало повседневной работы по <br>
+                        формированию позиции.
+                    </p>
+                </li>
+                <li>
+                    <h3>Пунктуальность</h3>
+                    <p>
+                        Задача организации, в особенности </br>
+                        же рамки и место обучения кадров </br>
+                        влечет за собой.
+                    </p>
+                </li>
+                <li>
+                    <h3>Планирование</h3>
+                    <p>
+                        Равным образом консультация с широким </br>
+                        активом в значительной </br>
+                        степени обуславливает.
+                    </p>
+                </li>
+                <li>
+                    <h3>Современные технологии</h3>
+                    <p>
+                        начимость этих проблем настолько </br>
+                        очевидна, что реализация плановых </br>
+                        заданий.
+                    </p>
+                </li>
+            </ul>
+        </section>
+        <!-- Примеры -->
+        <section>
+            <h2>Чем мы занимаемся</h2>
+            <ul>
+                <li><img src="./image/img.png" alt=""></li>
+                <li><img src="./image/img-1.png" alt=""></li>
+                <li><img src="./image/img-2.png" alt=""></li>
+            </ul>
+        </section>
+        <!-- Команда -->
+        <section>
+            <h2>Наша команда</h2>
+            <ul>
+                <li>
+                    <img src="./image/igor.jpg" alt="фото" width="270" height="260">
+                    <h3>Игорь Демьяненко</h3>
+                    <p>Product Designer</p>
+                </li>
+                <li>
+                    <img src="./image/olga.jpg" alt="фото" width="270" height="260">
+                    <h3>Ольга Репина</h3>
+                    <p>Frontend Developer</p> 
+                </li>
+                <li>
+                    <img src="./image/nicolai.jpg" alt="фото" width="270" height="260">
+                    <h3>Николай Тарасов</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./image/mihail.jpg" alt="фото" width="270" height="260">
+                    <h3>Михаил Ермаков</h3>
+                    <p>UI Designer</p>
+                </li>
+                
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <a href=""><span>Web</span>Studio</a>
+        <address>
+            <ul>
+                <li><a>г. Киев, пр-т Леси Украинки, 26</a></li>
+                <li><a href="mailto:info@example.com">info@example.com</a></li>
+                <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+            </ul>
+        </address>
+    </footer>   
 </body>
 </html>
